2008-01-10  Kevin McCullough  <kmccullough@apple.com>

        Reviewed by Darin, Sam, and Adam.

        -<rdar://problem/5654486> REGRESSION (Safari 3.0.4-TOT): clicking on
        link in gmail message displays JavaScript alert falsely complaining
        about pop-up blocking
        - When trying to open a new window, we now see if the user gesture
        occurred in the global dynamic object instead of the frame since that is
        the only place an event can occur.

        * fast/events/open-window-from-another-frame-expected.txt: Added.
        * fast/events/open-window-from-another-frame.html: Added.
        * fast/events/resources/open-window-from-another-frame-otherFrame.html: Added.
        * fast/events/resources/window-opened.html: Added.
        * platform/win/Skipped:

2008-01-10  Dan Bernstein  <mitz@apple.com>

        Reviewed by Darin Adler.

        - re-enable crashing test after fixing http://bugs.webkit.org/show_bug.cgi?id=16782
          <rdar://problem/5675331> REGRESSION(r29266): Reproducible crash in fast/replaced/image-map.html

        * fast/replaced/image-map-expected.txt: Updated results for the new
        behavior, which is to replace the document with the success message.
        * fast/replaced/image-map.html: Copied from LayoutTests/fast/replaced/image-map.html-disabled.
        * fast/replaced/image-map.html-disabled: Removed.

2008-01-10  Dan Bernstein  <mitz@apple.com>

        Reviewed by John Sullivan.

        - make more tests pass on Windows by forcing font fallback to match
          Mac OS X.

        * fast/css/beforeSelectorOnCodeElement.html:
        * fast/css/rtl-ordering.html:
        * fast/css/text-security.html:
        * platform/win/Skipped:

2008-01-09  Ada Chan  <adachan@apple.com>

        Tests tabbing with different combinations of modifiers keys, where some
        should advance focus and some should not.

        Reviewed by Darin.

        * fast/forms/tabs-with-modifiers-expected.txt: Added.