@@ -364,9 +364,6 @@ http/tests/security/dataURL/xss-DENIED-to-data-url-sub-frame-uppercase.html
 # <rdar://5666926>
 svg/custom/use-css-no-effect-on-shadow-tree.svg
 
-# <rdar://5667003> Undefined value exception
-fast/dom/xmlhttprequest-html-response-encoding.html
-
 # <rdar://5667007> 2 SVG text tests failing (due to bad rounding?)
 svg/batik/text/textOnPath.svg
 svg/batik/text/verticalTextOnPath.svg
